# websockets_agent

./: .gitignore  CMakeLists.txt  README.md  director.toml  fsm.dot  mads.ini  websockets_agent.code-workspace
cmake/: EmbedWebAssets.cmake
react_client/: AGENTS.md  App.tsx  README.md  app.json  package-lock.json  package.json
src/: CMakeLists.txt  banner.cpp  banner.hpp  bridge.cpp  bridge.hpp  fsm_agent.hpp  fsm_agent_impl.hpp  terminal_qr.cpp  terminal_qr.hpp  web_assets.hpp
src/main/: mads-websockets.cpp  ws_client.cpp
tests/: CMakeLists.txt  test_bridge.cpp
web/: index.html
